[package]
name = "advent_of_code_2018"
version = "0.1.0"
authors = ["Aidiakapi <aidiakapi@gmail.com>"]
edition = "2018"

[dependencies]
colored = "2.0.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
lazy_static = "1.2.0"
regex = "1.1.0"
serde = "1.0.84"
serde_json = "1.0.34"
bincode = "1.0.1"
rust-crypto = "0.2.36"
itertools = "0.10.3"
permutohedron = "0.2.4"
smallvec = "1.8.0"
num-traits = "0.2.6"
twoway = "0.2.0"
pathfinding = "3.0.13"
bitflags = "1.0.4"
ansi_term = "0.12.1"